TestHiR-JRM/src/objects/Opportunity_Product_Discount__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount</label>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Opportunity Product Discounts</relationshipLabel>
        <relationshipName>Opportunity_Product_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Discounts</relationshipLabel>
        <relationshipName>Opportunity_Product_Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OpprotunityProductId__c</fullName>
        <label>OpprotunityProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Product Discount</label>
    <nameField>
        <label>Opportunity Product Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>